# evm-assigner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
.github/scripts/: pure-cmake-build.sh
.github/workflows/: build.yml
cmake/: Config.cmake.in
cmake/cable/: CableCompilerSettings.cmake
lib/: CMakeLists.txt
lib/assigner/: CMakeLists.txt
lib/assigner/evmc/: evmc.h  evmc.hpp  helpers.h  hex.hpp  utils.h
lib/assigner/evmone/: baseline.hpp  baseline_instruction_table.hpp  eof.hpp  execution_state.hpp  instructions.hpp  instructions_xmacro.hpp
lib/assigner/include/: assigner.hpp  bytecode.hpp  client.hpp  rw.hpp  vm_host.h  vm_host.hpp  zkevm_word.hpp
lib/assigner/include/nil/blueprint/: assigner.hpp  assigner_interface.hpp  handler.hpp  handler_base.hpp  test_plonk_component.hpp  zkevm_word.hpp
lib/assigner/src/: handler_base.cpp  vm_host.cpp
lib/assigner/test/: CMakeLists.txt  assigner_test.cpp  test_host.cpp  test_host.h
lib/evmone/: CMakeLists.txt  advanced_instructions.cpp  baseline.cpp  baseline.hpp  eof.cpp  execution_state.hpp  instructions.hpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  instructions_xmacro.hpp  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
lib/fprinter/: CMakeLists.txt  fprinter.h  fprinter_test.cpp
